--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
     <div class="hero"></div>
     <main class="content">
         <article id="search-engine-optimization" class="content-article-style">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="blah blah" >
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="notepad with web development tools for an seo" >
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
         <article id="online-reputation-management" class="content-article-style">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="" >
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="person at work with cell phone in hand and silver laptop computer with graph leading upwards and title that says reputation" >
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
         <article id="social-media-marketing" class="content-article-style">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="" >
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="marketing metting at a conference table" >
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -51,21 +51,21 @@
     <aside class="benefits">
         <article class="benefit-aside">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="">
+            <img src="./assets/images/lead-generation.png" alt="black sillhouette with gear at top, arrow pointing down in middle, and money sign at bottom">
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </article>
         <article class="benefit-aside">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="" >
+            <img src="./assets/images/brand-awareness.png" alt="working person with a light bulb as head" >
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </article>
         <article class="benefit-aside">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="" >
+            <img src="./assets/images/cost-management.png" alt="gears churning with money signs" >
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
